<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/categoryCardHeight"
    android:layout_marginHorizontal="@dimen/halfMargin"
    android:layout_marginVertical="@dimen/halfMargin"
    android:background="@color/white_color"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/shapesRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_color"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCategoryImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/categoryCardImageHeight"
            android:scaleType="centerCrop"
            tools:contentDescription="@string/description_category_image_placeholder"
            tools:src="@drawable/bcg_categories"
            android:contentDescription="@string/description_category_image_placeholder"/>

        <TextView
            android:id="@+id/tvCategoryTitle"
            style="@style/StyleCategoryCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/halfMargin"
            android:layout_marginTop="@dimen/halfMargin"
            tools:text="@string/title_category_placeholder" />

        <TextView
            android:id="@+id/tvCategoryDescription"
            style="@style/StyleCategoryCardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/halfMargin"
            android:layout_marginTop="@dimen/halfMargin"
            tools:text="@string/description_category_placeholder" />
    </LinearLayout>
</androidx.cardview.widget.CardView>